[package]
name = "xurdf-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xurdfpy"
crate-type = ["cdylib"]

[dependencies]
xurdf = { path = "../xurdf" }
nalgebra = "0.31.0"
numpy = "0.17.2"
ndarray = "0.15.6"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]
