[package]
name = "xurdf-python"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xurdfpy"
crate-type = ["cdylib"]

[dependencies]
xurdf = { path = "../xurdf" }

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]
