[package]
name = "xurdf-python"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xurdfpy"
crate-type = ["cdylib"]

[dependencies]
xurdf = { path = "../xurdf" }

[dependencies.pyo3]
version = "0.28.3"
features = ["extension-module", "abi3-py39"]
