[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "xurdfpy"
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
xurdf-xacro = "xurdfpy:xacro_main"

[tool.maturin]
include = [
    { path = "xurdfpy/__init__.py", format = "wheel" },
    { path = "xurdfpy/__init__.pyi", format = "wheel" },
    { path = "xurdfpy/py.typed", format = "wheel" },
    { path = "xurdfpy/__init__.py", format = "sdist" },
    { path = "xurdfpy/__init__.pyi", format = "sdist" },
    { path = "xurdfpy/py.typed", format = "sdist" },
]
