[package]
name = "xurdf"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Parse URDF and Xacro."
readme = "README.md"
documentation = "http://neka-nat.github.io/xurdf/xurdf/"
homepage = "https://github.com/neka-nat/xurdf"
repository = "https://github.com/neka-nat/xurdf"
keywords = ["robotics", "urdf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
roxmltree = "0.14.1"
nalgebra = "0.30.0"
xmltree = "0.10.3"
regex = "1.7.0"
evalexpr = "8.1.0"
once_cell = "1.17.0"
